--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,28 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    
+    <img src="../images/Lasagna.jpeg">
+    <p>Lasagna with sausage, mushrooms, and lots of cheese is fast and easy on the stove top--and there's no compromise on flavor.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 tablespoon olive oil</li>
+        <li>1 medium onion, diced</li>
+        <li>1 pound hot italian sausage</li>
+        <li>1 medium red bell pepper, diced</li>
+        <li>2 cup sliced mushrooms</li>
+        <li>1 (24 ounce) jar RAGU Old World Style Traditional Sauce</li>
+        <li>1 (9 ounce) package no-boil lasagna sheets, broken into large pieces</li>
+        <li>1 cup water</li>
+        <li>1/2 teaspoon cruched dried rosemary</li>
+        <li>8 ounces ricotta cheese</li>
+        <li>8 ounces part-skim mozzarella cheese, shredded and divide</li>
+        <li>2 tablespoons minced fresh italian parsley</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Heat a large skillet over medium high heat and add olive oil. Swirl to coat. Add the onion and saute until translucent, about 5 minutes. Add the sausage, red pepper, and mushrooms; saute until meat is cooked through, about 5 minutes.</li>
+        <li>Stir in the Ragu® Old World Style® Traditional sauce, broken lasagna noodles, water, and rosemary. Cover and turn heat down to medium-low.</li>
+        <li>Cook for 20 minutes, stirring occasionally, until the pasta is al dente. Remove the lid and add the ricotta, 2/3 of the cheese, and parsley; stir to combine. Top with remaining mozzarella and serve immediately.</li>
+    </ol>
 </body>
 </html>
