--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
         <li><a href="recipes/pumpkin-pie.html">Pumpkin Pie Recipe</a></li>
-        <li></li>
+        <li><a href="images/asparagus.jpeg">Oven-Roasted Asparagus</a></li>
     </ul>
 </body>
 </html>
